# RaytracingEngine

./: .gitignore  .gitmodules  CAMERA_COMMANDS.md  CAMERA_UPGRADE_NOTES.md  CMakeLists.txt  OPTIMIZATIONS.md  README.md  build.sh  hello.cl  main.cpp  mainwindow.cpp  mainwindow.h
assets/: SeaMonster.off
assets/emissives/minecraft/: glowstone_e.ppm  magma_e.ppm
assets/metallics/minecraft/: diamond_m.ppm  emerald_m.ppm  gold_m.ppm  iron_m.ppm
assets/models3D/: mario_64_mario.off  sonic_low_poly.off
assets/normals/minecraft/: amethyst_n.ppm  diamond_n.ppm  emerald_n.ppm  glowstone_n.ppm  gold_n.ppm  iron_n.ppm  magma_n.ppm  stone_n.ppm  water_n.ppm
assets/textures/: goat_lutz.ppm
assets/textures/minecraft/: amethyst.ppm  diamond.ppm  emerald.ppm  glowstone.ppm  gold.ppm  iron.ppm  magma.ppm  stone.ppm  water.ppm
kernels/: hello.cl  rayTrace.cl  rayTrace.cl.backup  testKernel.cl
panels/: CameraPanel.h  ObjectPanel.cpp  ObjectPanel.h  ParametersPanel.h  ScenePanel.cpp  ScenePanel.h
saves/: recentProject.json
saves/exampleScenes/: CornellBox.json  lutzScene.json  minecraft.json  multiBoule.json
saves/userSaves/: simple.json  toto.json
src/core/CamRay/: CamRay.h
src/core/DeviceManager/: DeviceManager.h
src/core/KernelManager/: KernelManager.cpp  KernelManager.h
src/core/Ray/: Ray.h
src/core/bvh/: bvh.cpp  bvh.h  bvhNode.h
src/core/camera/: Camera.cpp  Camera.h  Camera_Helper.cpp  Camera_Helper.h
src/core/commands/: CommandsManager.cpp  CommandsManager.h  ICommand.h  ShapeCommands.cpp  ShapeCommands.h
src/core/commands/actionsCommands/: AddShapeCommand.h  CameraFOVCommand.h  CameraMoveCommand.h  CameraResetCommand.h  CameraRotationCommand.h  ClearTextureShape.h  DeleteShapeCommand.h  MoveShapeCommand.h  RotateShapeCommand.h  ScaleShapeCommand.h  SetTextureShape.h  addShapeCommand.h  deleteShapeCommand.h
src/core/commands/actionsCommands/camera/: CameraFOVCommand.h  CameraMoveCommand.h  CameraNbBouncesCommand.h  CameraRPPCommand.h  CameraResetCommand.h  CameraRotationCommand.h
src/core/commands/actionsCommands/materials/: ClearMetallicShape.h  ClearNormalShape.h  ClearTextureShape.h  MaterialDiffuseColorCommand.h  MaterialEmissiveCommand.h  MaterialEmissiveShape.h  MaterialIORCommand.h  MaterialMetalnessCommand.h  MaterialTransparencyCommand.h  SetMetallicShape.h  SetNormalShape.h  SetTextureShape.h
src/core/commands/actionsCommands/shapes/: AddShapeCommand.h  DeleteShapeCommand.h  MoveShapeCommand.h  RotateShapeCommand.h  ScaleShapeCommand.h
src/core/defines/: Defines.h
src/core/input/: KeyInput.cpp  KeyInput.h  KeyInput.hpp  Keybinds.cpp  Keybinds.h  Keybinds.hpp
src/core/material/: Material.cpp  Material.h
src/core/math/: aabb.h  mat3.h  mat4.h  transformUtils.h  vec3.h
src/core/shapes/: Mesh.cpp  Mesh.h  Shape.h  Sphere.cpp  Sphere.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
src/core/systems/DeviceManager/: DeviceManager.cpp  DeviceManager.h
src/core/systems/FileManager/: FileManager.cpp  FileManager.h
src/core/systems/KernelManager/: KernelManager.cpp  KernelManager.h
src/core/systems/RenderEngine/: RenderEngine.cpp  RenderEngine.h
src/core/systems/SceneManager/: SceneManager.cpp  SceneManager.h
src/core/utils/imageLoader/: ImageLoader.cpp  ImageLoader.h
src/ui/: CollapsiblePanel.h  MainWindow.cpp  MainWindow.h  MenuWindow.cpp  MenuWindow.h  RenderWidget.cpp  RenderWidget.h
src/ui/panels/: CameraPanel.cpp  CameraPanel.h  CustomDoubleSpinBox.h  FPSChart.cpp  FPSChart.h  FPSChartPanel.cpp  FPSChartPanel.h  ObjectPanel.cpp  ObjectPanel.h  ObjectPropertiesPanel.cpp  ObjectPropertiesPanel.h  ParametersPanel.cpp  ParametersPanel.h  ScenePanel.cpp  ScenePanel.h  SceneTreeWidget.cpp  SceneTreeWidget.h
ui/: CollapsiblePanel.cpp  CollapsiblePanel.h  MainWindow.cpp  MainWindow.h  RenderWidget.cpp  RenderWidget.h
